--- a/代码验证.ipynb
+++ b/代码验证.ipynb
@@ -161,12 +161,43 @@
    "execution_count": 9
   },
   {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-09-19T06:08:57.954629Z",
+     "start_time": "2025-09-19T06:08:57.829088Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "from playwright.sync_api import sync_playwright\n",
+    "\n",
+    "def main():\n",
+    "    with sync_playwright() as p:\n",
+    "        # 启动浏览器（headless=False 表示可见模式）\n",
+    "        browser = p.chromium.launch(headless=False, slow_mo=500)\n",
+    "        page = browser.new_page()\n",
+    "\n",
+    "        # 打开目标网页\n",
+    "        page.goto(\"https://www.mobile-ichiban.com/Prod/1/01\")\n",
+    "\n",
+    "        # 点击某个元素（示例：页面上的链接）\n",
+    "        # page.click(\"a\")  # 用 CSS 选择器定位元素，这里点击第一个 <a> 标签\n",
+    "\n",
+    "        # 保持浏览器打开，等待你手动关闭\n",
+    "        input(\"按回车键后关闭浏览器...\")\n",
+    "        browser.close()"
+   ],
+   "id": "31b777be1aa0aa20",
+   "outputs": [],
+   "execution_count": 1
+  },
+  {
    "metadata": {},
    "cell_type": "code",
    "outputs": [],
    "execution_count": null,
    "source": "",
-   "id": "31b777be1aa0aa20"
+   "id": "e8857e92d0f1a81b"
   }
  ],
  "metadata": {
