--- a/代码验证.ipynb
+++ b/代码验证.ipynb
@@ -658,6 +658,34 @@
    "id": "e8857e92d0f1a81b",
    "outputs": [],
    "execution_count": 7
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-09-22T02:36:30.571494Z",
+     "start_time": "2025-09-22T02:36:30.550100Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "import secrets\n",
+    "print(secrets.token_urlsafe(16))   # ≈22字符，URL安全\n",
+    "print(secrets.token_urlsafe(24))   # ≈32字符，URL安全（更强）\n",
+    "print(secrets.token_hex(16))"
+   ],
+   "id": "894f44165f187a3d",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7kgVlcMczUO46Oimg4msuw\n",
+      "XNgCZCQN7dvkSP7K17xmK8aq-6_bjvI_\n",
+      "0ff8a581e3688826f0949d36927a5d9a\n"
+     ]
+    }
+   ],
+   "execution_count": 1
   }
  ],
  "metadata": {
