--- a/代码验证.ipynb
+++ b/代码验证.ipynb
@@ -686,6 +686,141 @@
     }
    ],
    "execution_count": 1
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "import json\n",
+    "import pandas as pd\n",
+    "\n",
+    "def calculate_highest(prices):\n",
+    "    \"\"\"\n",
+    "    Placeholder function to calculate the '最高' value.\n",
+    "    Currently returns the maximum price; to be updated with final calculation method.\n",
+    "    \"\"\"\n",
+    "    return max(prices) if prices else 0\n",
+    "\n",
+    "def calculate_diff(msrp, highest):\n",
+    "    \"\"\"\n",
+    "    Placeholder function to calculate the '差額' value.\n",
+    "    Currently returns msrp - highest; to be updated with final calculation method.\n",
+    "    \"\"\"\n",
+    "    return msrp - highest if msrp else 0\n",
+    "\n",
+    "def calculate_buy_rate(highest, msrp):\n",
+    "    \"\"\"\n",
+    "    Placeholder function to calculate the '買取率' value.\n",
+    "    Currently returns (highest / msrp * 100) rounded to 2 decimals; to be updated with final calculation method.\n",
+    "    \"\"\"\n",
+    "    return round((highest / msrp * 100), 2) if msrp else 0\n",
+    "\n",
+    "def calculate_prev_diff():\n",
+    "    \"\"\"\n",
+    "    Placeholder function to calculate the '前日比' value.\n",
+    "    Currently returns 0; to be updated with final calculation method (may require additional parameters like previous data).\n",
+    "    \"\"\"\n",
+    "    return 0\n",
+    "\n",
+    "def generate_excel(json_file, output_excel):\n",
+    "    \"\"\"\n",
+    "    Generates an Excel file based on the provided JSON data, mirroring the structure of the given XLSX.\n",
+    "\n",
+    "    Assumes JSON structure:\n",
+    "    {\n",
+    "        \"stores\": [\"Store1\", \"Store2\", ..., \"Store21\"],  # List of 21 store names (optional, defaults to placeholders)\n",
+    "        \"models\": [\n",
+    "            {\n",
+    "                \"name\": \"iPhone 17 Pro Max\",\n",
+    "                \"colors\": [\"Orange\", \"Blue\", \"Silver\"],  # Optional: if present, indicates colored variants\n",
+    "                \"capacities\": [\n",
+    "                    {\n",
+    "                        \"capacity\": \"256GB\",\n",
+    "                        \"msrp\": 200000,\n",
+    "                        \"prices\": {\n",
+    "                            \"ALL\": [price1, price2, ..., price21],  # List of 21 prices for ALL\n",
+    "                            \"Orange\": [price1, price2, ..., price21],  # If colors present\n",
+    "                            \"Blue\": [...],\n",
+    "                            \"Silver\": [...]\n",
+    "                        }\n",
+    "                    },\n",
+    "                    # Additional capacities...\n",
+    "                ]\n",
+    "            },\n",
+    "            # Additional models...\n",
+    "        ]\n",
+    "    }\n",
+    "    \"\"\"\n",
+    "    with open(json_file, 'r', encoding='utf-8') as f:\n",
+    "        data = json.load(f)\n",
+    "\n",
+    "    # Use provided stores or default placeholders (must be 21)\n",
+    "    stores = data.get('stores', [f\"Store{i}\" for i in range(1, 22)])\n",
+    "\n",
+    "    if len(stores) != 21:\n",
+    "        raise ValueError(\"Stores list must contain exactly 21 entries.\")\n",
+    "\n",
+    "    rows = []\n",
+    "    columns = ['機種名', '容量', '定価', '最高', '差額', '買取率', '前日比', '種別'] + stores\n",
+    "\n",
+    "    for model in data['models']:\n",
+    "        model_name = model['name']\n",
+    "        colors = model.get('colors', [])\n",
+    "        is_colored = len(colors) > 0\n",
+    "        first_capacity = True\n",
+    "\n",
+    "        for capacity_data in model['capacities']:\n",
+    "            capacity = capacity_data['capacity']\n",
+    "            msrp = capacity_data['msrp']\n",
+    "            prices_dict = capacity_data['prices']\n",
+    "\n",
+    "            # Main row for capacity (ALL)\n",
+    "            all_prices = prices_dict.get('ALL', [0] * 21)\n",
+    "            if len(all_prices) != 21:\n",
+    "                raise ValueError(f\"Prices for ALL in {model_name} {capacity} must contain 21 entries.\")\n",
+    "\n",
+    "            highest = calculate_highest(all_prices)\n",
+    "            diff = calculate_diff(msrp, highest)\n",
+    "            rate = calculate_buy_rate(highest, msrp)\n",
+    "            prev = calculate_prev_diff()\n",
+    "\n",
+    "            main_row = [\n",
+    "                model_name if first_capacity else '',\n",
+    "                capacity,\n",
+    "                msrp,\n",
+    "                highest,\n",
+    "                diff,\n",
+    "                rate,\n",
+    "                prev,\n",
+    "                'ALL'\n",
+    "            ] + all_prices\n",
+    "            rows.append(main_row)\n",
+    "\n",
+    "            first_capacity = False\n",
+    "\n",
+    "            # Add sub-rows for colors if applicable\n",
+    "            if is_colored:\n",
+    "                for color in colors:\n",
+    "                    color_prices = prices_dict.get(color, [0] * 21)\n",
+    "                    if len(color_prices) != 21:\n",
+    "                        raise ValueError(f\"Prices for {color} in {model_name} {capacity} must contain 21 entries.\")\n",
+    "                    sub_row = [''] * 7 + [color] + color_prices\n",
+    "                    rows.append(sub_row)\n",
+    "\n",
+    "    df = pd.DataFrame(rows, columns=columns)\n",
+    "    df.to_excel(output_excel, index=False, sheet_name='Sheet1')"
+   ],
+   "id": "37508ded1462b1b7"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "",
+   "id": "12fcd9e746ce517c"
   }
  ],
  "metadata": {
