--- a/自动化脚本.ipynb
+++ b/自动化脚本.ipynb
@@ -1032,8 +1032,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-10-16T14:22:44.290834Z",
-     "start_time": "2025-10-16T06:04:27.754107Z"
+     "end_time": "2025-10-17T05:43:26.443233Z",
+     "start_time": "2025-10-17T05:43:26.432793Z"
     }
    },
    "cell_type": "code",
@@ -1078,7 +1078,7 @@
      ]
     }
    ],
-   "execution_count": 11
+   "execution_count": 49
   },
   {
    "metadata": {},
@@ -1202,10 +1202,13 @@
    "execution_count": 48
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-10-17T09:00:42.152860Z",
+     "start_time": "2025-10-17T08:38:44.683696Z"
+    }
+   },
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": [
     "\"\"\"\n",
     "把本地 WebScraperData 下的 Excel 先转成 CSV 再上传到\n",
@@ -1223,11 +1226,11 @@
     "import pandas as pd\n",
     "\n",
     "# ------------- 配置区 -------------\n",
-    "ACCESS = os.environ.get(\"ACCESS\") or \"eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ0b2tlbl90eXBlIjoiYWNjZXNzIiwiZXhwIjoxNzYwNjgxMTk4LCJpYXQiOjE3NjA2NzkzOTgsImp0aSI6IjQ5ZmYzZmI5YmM2NzRlYTA4NTBjYzQ0YjkzOTNkMGI0IiwidXNlcl9pZCI6IjEifQ.erkQDVJ297O2Th0ZsfWN-TEqOUxsrU_ZGgb3ssKd_2U\"   # 建议用环境变量注入\n",
-    "URL = \"https://yamaguti.ngrok.io/AppleStockChecker/purchasing-price-records/import-tradein-xlsx/?dry_run=0\"\n",
+    "ACCESS = \"eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ0b2tlbl90eXBlIjoiYWNjZXNzIiwiZXhwIjoxNzYwNjkzNTQ0LCJpYXQiOjE3NjA2OTE3NDQsImp0aSI6IjM3N2RiODMwMzVjMzQwNzQ5YTFhMjU3M2YyMGQ0N2I5IiwidXNlcl9pZCI6IjEifQ.yWN_vbAFti5CI3s7DDRqDPNY1BwtDC_BO0Ev5SJAELg\"   # 建议用环境变量注入\n",
+    "URL = \"http://yamaguti.ngrok.io/AppleStockChecker/purchasing-price-records/import-tradein-xlsx/?dry_run=0\"\n",
     "ROOT = \"WebScraperData\"                           # 本地根目录\n",
-    "SLEEP_BETWEEN = 2000.0                               # 每个文件之间的间隔（秒）\n",
-    "RETRIES = 2\n",
+    "SLEEP_BETWEEN = 1.0                               # 每个文件之间的间隔（秒）\n",
+    "RETRIES = 0\n",
     "BACKOFF = 2.0\n",
     "TMP_DIR = Path(\".tmp_csv_uploads\")                # 转换后的临时 CSV 存放目录\n",
     "TMP_DIR.mkdir(exist_ok=True)\n",
@@ -1304,14 +1307,14 @@
     "    return \"ERROR\", last_err\n",
     "\n",
     "def main():\n",
-    "    if not ACCESS or ACCESS == \"<token>\":\n",
+    "    if not ACCESS :\n",
     "        raise SystemExit(\"请先设置 ACCESS（export ACCESS=...）或在脚本顶部填写。\")\n",
     "\n",
     "    files = list_files(ROOT)\n",
     "    print(f\"Found {len(files)} files under {ROOT}\")\n",
     "\n",
     "    success = fail = 0\n",
-    "    for i, f in enumerate(files, 1):\n",
+    "    for i, f in enumerate(files[1:], 1):\n",
     "        src = Path(f)\n",
     "        # 从文件名提取清洗器名：<dir>/<shopX>.<ext> → shopX\n",
     "        source_name = src.stem\n",
@@ -1346,12 +1349,233 @@
     "if __name__ == \"__main__\":\n",
     "    main()"
    ],
-   "id": "842038ff9b5cc395"
+   "id": "842038ff9b5cc395",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found 15 files under WebScraperData\n",
+      "[1/15] WebScraperData/shop20/shop20.xlsx  ->  source=shop20\n",
+      "   HTTP/1.1 100 Continue\n",
+      "HTTP/1.1 100 Continue\n",
+      "\n",
+      "HTTP/1.1 100 Continue\n",
+      "\n",
+      "HTTP/1.1 202 Accepted\n",
+      "Allow: POST, OPTIONS\n",
+      "Content-Language: ja\n",
+      "Content-Length: 211\n",
+      "Content-Type: application/json\n",
+      "Cross-Origin-Opener-Policy: same-origin\n",
+      "Date: Fri, 17 Oct 2025 08:47:58 GMT\n",
+      "Referrer-Policy: same-origin\n",
+      "Server: nginx/1.25.5\n",
+      "Vary: Accept, Cookie, origin, Accept-Language\n",
+      "X-Content-Type-Options: nosniff\n",
+      "[2/15] WebScraperData/shop3/shop3.xlsx  ->  source=shop3\n",
+      "   HTTP/1.1 100 Continue\n",
+      "HTTP/1.1 100 Continue\n",
+      "\n",
+      "HTTP/1.1 202 Accepted\n",
+      "Allow: POST, OPTIONS\n",
+      "Content-Language: ja\n",
+      "Content-Length: 209\n",
+      "Content-Type: application/json\n",
+      "Cross-Origin-Opener-Policy: same-origin\n",
+      "Date: Fri, 17 Oct 2025 08:48:56 GMT\n",
+      "Referrer-Policy: same-origin\n",
+      "Server: nginx/1.25.5\n",
+      "Vary: Accept, Cookie, origin, Accept-Language\n",
+      "X-Content-Type-Options: nosniff\n",
+      "\n",
+      "{\"accepted\":true,\"dry_run\":false,\"dedupe\":true,\"upsert\":false,\"batch_id\":\"b8c17424-eaf5-4679-a473-a4fb9ca6b517\",\"tasks\":[{\"file\":\"shop3.csv\",\"task_id\":\"9a726a72-5fc8-40c7-af50-ad08743c8120\",\"source\":\"shop3\"}]}\n",
+      "[3/15] WebScraperData/shop4/shop4.xlsx  ->  source=shop4\n",
+      "   HTTP/1.1 100 Continue\n",
+      "HTTP/1.1 100 Continue\n",
+      "\n",
+      "HTTP/1.1 202 Accepted\n",
+      "Allow: POST, OPTIONS\n",
+      "Content-Language: ja\n",
+      "Content-Length: 209\n",
+      "Content-Type: application/json\n",
+      "Cross-Origin-Opener-Policy: same-origin\n",
+      "Date: Fri, 17 Oct 2025 08:49:39 GMT\n",
+      "Referrer-Policy: same-origin\n",
+      "Server: nginx/1.25.5\n",
+      "Vary: Accept, Cookie, origin, Accept-Language\n",
+      "X-Content-Type-Options: nosniff\n",
+      "\n",
+      "{\"accepted\":true,\"dry_run\":false,\"dedupe\":true,\"upsert\":false,\"batch_id\":\"6cebca00-5f70-4b15-af06-0bc095de150e\",\"tasks\":[{\"file\":\"shop4.csv\",\"task_id\":\"021a15ea-71d8-448a-a471-c948dd2ac22f\",\"source\":\"shop4\"}]}\n",
+      "[4/15] WebScraperData/shop5-1/shop5-1.xlsx  ->  source=shop5-1\n",
+      "   HTTP/1.1 100 Continue\n",
+      "HTTP/1.1 100 Continue\n",
+      "\n",
+      "HTTP/1.1 202 Accepted\n",
+      "Allow: POST, OPTIONS\n",
+      "Content-Language: ja\n",
+      "Content-Length: 213\n",
+      "Content-Type: application/json\n",
+      "Cross-Origin-Opener-Policy: same-origin\n",
+      "Date: Fri, 17 Oct 2025 08:51:36 GMT\n",
+      "Referrer-Policy: same-origin\n",
+      "Server: nginx/1.25.5\n",
+      "Vary: Accept, Cookie, origin, Accept-Language\n",
+      "X-Content-Type-Options: nosniff\n",
+      "\n",
+      "{\"accepted\":true,\"dry_run\":false,\"dedupe\":true,\"upsert\":false,\"batch_id\":\"a00e500f-8456-40e4-97a3-e94665447e83\",\"tasks\":[{\"file\":\"shop5-1.csv\",\"task_id\":\"47d2910c-e96b-4fe7-b6f7-540222feeccd\",\"source\":\"shop5-1\"}]}\n",
+      "[5/15] WebScraperData/shop5-2/shop5-2.xlsx  ->  source=shop5-2\n",
+      "   HTTP/1.1 100 Continue\n",
+      "HTTP/1.1 100 Continue\n",
+      "\n",
+      "HTTP/1.1 202 Accepted\n",
+      "Allow: POST, OPTIONS\n",
+      "Content-Language: ja\n",
+      "Content-Length: 213\n",
+      "Content-Type: application/json\n",
+      "Cross-Origin-Opener-Policy: same-origin\n",
+      "Date: Fri, 17 Oct 2025 08:53:44 GMT\n",
+      "Referrer-Policy: same-origin\n",
+      "Server: nginx/1.25.5\n",
+      "Vary: Accept, Cookie, origin, Accept-Language\n",
+      "X-Content-Type-Options: nosniff\n",
+      "\n",
+      "{\"accepted\":true,\"dry_run\":false,\"dedupe\":true,\"upsert\":false,\"batch_id\":\"18f8b6e7-4b2e-45dc-90c3-92aabb39812e\",\"tasks\":[{\"file\":\"shop5-2.csv\",\"task_id\":\"4e6f0157-df10-40c8-aafc-a1ec0c64f051\",\"source\":\"shop5-2\"}]}\n",
+      "[6/15] WebScraperData/shop5-3/shop5-3.xlsx  ->  source=shop5-3\n",
+      "   HTTP/1.1 100 Continue\n",
+      "HTTP/1.1 100 Continue\n",
+      "\n",
+      "HTTP/1.1 202 Accepted\n",
+      "Allow: POST, OPTIONS\n",
+      "Content-Language: ja\n",
+      "Content-Length: 213\n",
+      "Content-Type: application/json\n",
+      "Cross-Origin-Opener-Policy: same-origin\n",
+      "Date: Fri, 17 Oct 2025 08:56:15 GMT\n",
+      "Referrer-Policy: same-origin\n",
+      "Server: nginx/1.25.5\n",
+      "Vary: Accept, Cookie, origin, Accept-Language\n",
+      "X-Content-Type-Options: nosniff\n",
+      "\n",
+      "{\"accepted\":true,\"dry_run\":false,\"dedupe\":true,\"upsert\":false,\"batch_id\":\"f0e7b9c6-e260-4146-8ea3-8af247be67a4\",\"tasks\":[{\"file\":\"shop5-3.csv\",\"task_id\":\"a4bd7d1d-992e-4475-83e4-698b7b2f8cc6\",\"source\":\"shop5-3\"}]}\n",
+      "[7/15] WebScraperData/shop5-4/shop5-4.xlsx  ->  source=shop5-4\n",
+      "   HTTP/1.1 100 Continue\n",
+      "HTTP/1.1 100 Continue\n",
+      "\n",
+      "HTTP/1.1 403 Forbidden\n",
+      "Allow: POST, OPTIONS\n",
+      "Content-Language: ja\n",
+      "Content-Length: 172\n",
+      "Content-Type: application/json\n",
+      "Cross-Origin-Opener-Policy: same-origin\n",
+      "Date: Fri, 17 Oct 2025 08:58:24 GMT\n",
+      "Referrer-Policy: same-origin\n",
+      "Server: nginx/1.25.5\n",
+      "Vary: Accept, Cookie, origin, Accept-Language\n",
+      "X-Content-Type-Options: nosniff\n",
+      "\n",
+      "{\"detail\":\"Given token not valid for any token type\",\"code\":\"token_not_valid\",\"messages\":[{\"token_class\":\"AccessToken\",\"token_type\":\"access\",\"message\":\"Token is expired\"}]}\n",
+      "[8/15] WebScraperData/shop6-1/shop6-1.xlsx  ->  source=shop6-1\n",
+      "   HTTP/1.1 100 Continue\n",
+      "HTTP/1.1 100 Continue\n",
+      "\n",
+      "HTTP/1.1 403 Forbidden\n",
+      "Allow: POST, OPTIONS\n",
+      "Content-Language: ja\n",
+      "Content-Length: 172\n",
+      "Content-Type: application/json\n",
+      "Cross-Origin-Opener-Policy: same-origin\n",
+      "Date: Fri, 17 Oct 2025 08:59:07 GMT\n",
+      "Referrer-Policy: same-origin\n",
+      "Server: nginx/1.25.5\n",
+      "Vary: Accept, Cookie, origin, Accept-Language\n",
+      "X-Content-Type-Options: nosniff\n",
+      "\n",
+      "{\"detail\":\"Given token not valid for any token type\",\"code\":\"token_not_valid\",\"messages\":[{\"token_class\":\"AccessToken\",\"token_type\":\"access\",\"message\":\"Token is expired\"}]}\n",
+      "[9/15] WebScraperData/shop6-2/shop6-2.xlsx  ->  source=shop6-2\n",
+      "   HTTP/1.1 100 Continue\n",
+      "HTTP/1.1 100 Continue\n",
+      "\n",
+      "HTTP/1.1 403 Forbidden\n",
+      "Allow: POST, OPTIONS\n",
+      "Content-Language: ja\n",
+      "Content-Length: 172\n",
+      "Content-Type: application/json\n",
+      "Cross-Origin-Opener-Policy: same-origin\n",
+      "Date: Fri, 17 Oct 2025 08:59:48 GMT\n",
+      "Referrer-Policy: same-origin\n",
+      "Server: nginx/1.25.5\n",
+      "Vary: Accept, Cookie, origin, Accept-Language\n",
+      "X-Content-Type-Options: nosniff\n",
+      "\n",
+      "{\"detail\":\"Given token not valid for any token type\",\"code\":\"token_not_valid\",\"messages\":[{\"token_class\":\"AccessToken\",\"token_type\":\"access\",\"message\":\"Token is expired\"}]}\n",
+      "[10/15] WebScraperData/shop6-3/shop6-3.xlsx  ->  source=shop6-3\n",
+      "   HTTP/1.1 100 Continue\n",
+      "HTTP/1.1 100 Continue\n",
+      "\n",
+      "HTTP/1.1 403 Forbidden\n",
+      "Allow: POST, OPTIONS\n",
+      "Content-Language: ja\n",
+      "Content-Length: 172\n",
+      "Content-Type: application/json\n",
+      "Cross-Origin-Opener-Policy: same-origin\n",
+      "Date: Fri, 17 Oct 2025 09:00:15 GMT\n",
+      "Referrer-Policy: same-origin\n",
+      "Server: nginx/1.25.5\n",
+      "Vary: Accept, Cookie, origin, Accept-Language\n",
+      "X-Content-Type-Options: nosniff\n",
+      "\n",
+      "{\"detail\":\"Given token not valid for any token type\",\"code\":\"token_not_valid\",\"messages\":[{\"token_class\":\"AccessToken\",\"token_type\":\"access\",\"message\":\"Token is expired\"}]}\n",
+      "[11/15] WebScraperData/shop6-4/shop6-4.xlsx  ->  source=shop6-4\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mKeyboardInterrupt\u001B[0m                         Traceback (most recent call last)",
+      "Cell \u001B[0;32mIn[64], line 138\u001B[0m\n\u001B[1;32m    134\u001B[0m     \u001B[38;5;66;03m# 如需清理临时 CSV，解除注释：\u001B[39;00m\n\u001B[1;32m    135\u001B[0m     \u001B[38;5;66;03m# shutil.rmtree(TMP_DIR, ignore_errors=True)\u001B[39;00m\n\u001B[1;32m    137\u001B[0m \u001B[38;5;28;01mif\u001B[39;00m \u001B[38;5;18m__name__\u001B[39m \u001B[38;5;241m==\u001B[39m \u001B[38;5;124m\"\u001B[39m\u001B[38;5;124m__main__\u001B[39m\u001B[38;5;124m\"\u001B[39m:\n\u001B[0;32m--> 138\u001B[0m     \u001B[43mmain\u001B[49m\u001B[43m(\u001B[49m\u001B[43m)\u001B[49m\n",
+      "Cell \u001B[0;32mIn[64], line 118\u001B[0m, in \u001B[0;36mmain\u001B[0;34m()\u001B[0m\n\u001B[1;32m    115\u001B[0m     \u001B[38;5;28mprint\u001B[39m(\u001B[38;5;124mf\u001B[39m\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124m  ✗ 转换失败：\u001B[39m\u001B[38;5;132;01m{\u001B[39;00me\u001B[38;5;132;01m}\u001B[39;00m\u001B[38;5;124m\"\u001B[39m)\n\u001B[1;32m    116\u001B[0m     \u001B[38;5;28;01mcontinue\u001B[39;00m\n\u001B[0;32m--> 118\u001B[0m status, resp \u001B[38;5;241m=\u001B[39m \u001B[43mpost_one\u001B[49m\u001B[43m(\u001B[49m\u001B[43mcsv_path\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43maccess\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[43mACCESS\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mretries\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[43mRETRIES\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mbackoff\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[43mBACKOFF\u001B[49m\u001B[43m)\u001B[49m\n\u001B[1;32m    119\u001B[0m \u001B[38;5;28mprint\u001B[39m(\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124m  \u001B[39m\u001B[38;5;124m\"\u001B[39m, status)\n\u001B[1;32m    120\u001B[0m \u001B[38;5;66;03m# 简要解析是否 202/200\u001B[39;00m\n",
+      "Cell \u001B[0;32mIn[64], line 86\u001B[0m, in \u001B[0;36mpost_one\u001B[0;34m(csv_path, access, retries, backoff)\u001B[0m\n\u001B[1;32m     84\u001B[0m \u001B[38;5;28;01mfor\u001B[39;00m attempt \u001B[38;5;129;01min\u001B[39;00m \u001B[38;5;28mrange\u001B[39m(retries \u001B[38;5;241m+\u001B[39m \u001B[38;5;241m1\u001B[39m):\n\u001B[1;32m     85\u001B[0m     \u001B[38;5;28;01mtry\u001B[39;00m:\n\u001B[0;32m---> 86\u001B[0m         out \u001B[38;5;241m=\u001B[39m \u001B[43msubprocess\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mcheck_output\u001B[49m\u001B[43m(\u001B[49m\u001B[43mcmd\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mstderr\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[43msubprocess\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mSTDOUT\u001B[49m\u001B[43m)\u001B[49m\n\u001B[1;32m     87\u001B[0m         text \u001B[38;5;241m=\u001B[39m out\u001B[38;5;241m.\u001B[39mdecode(\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mutf-8\u001B[39m\u001B[38;5;124m\"\u001B[39m, \u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mreplace\u001B[39m\u001B[38;5;124m\"\u001B[39m)\n\u001B[1;32m     88\u001B[0m         status_line \u001B[38;5;241m=\u001B[39m text\u001B[38;5;241m.\u001B[39msplitlines()[\u001B[38;5;241m0\u001B[39m] \u001B[38;5;28;01mif\u001B[39;00m text \u001B[38;5;28;01melse\u001B[39;00m \u001B[38;5;124m\"\u001B[39m\u001B[38;5;124m\"\u001B[39m\n",
+      "File \u001B[0;32m~/miniconda3/envs/YamagotiProjects/lib/python3.10/subprocess.py:421\u001B[0m, in \u001B[0;36mcheck_output\u001B[0;34m(timeout, *popenargs, **kwargs)\u001B[0m\n\u001B[1;32m    418\u001B[0m         empty \u001B[38;5;241m=\u001B[39m \u001B[38;5;124mb\u001B[39m\u001B[38;5;124m'\u001B[39m\u001B[38;5;124m'\u001B[39m\n\u001B[1;32m    419\u001B[0m     kwargs[\u001B[38;5;124m'\u001B[39m\u001B[38;5;124minput\u001B[39m\u001B[38;5;124m'\u001B[39m] \u001B[38;5;241m=\u001B[39m empty\n\u001B[0;32m--> 421\u001B[0m \u001B[38;5;28;01mreturn\u001B[39;00m \u001B[43mrun\u001B[49m\u001B[43m(\u001B[49m\u001B[38;5;241;43m*\u001B[39;49m\u001B[43mpopenargs\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mstdout\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[43mPIPE\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mtimeout\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[43mtimeout\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mcheck\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[38;5;28;43;01mTrue\u001B[39;49;00m\u001B[43m,\u001B[49m\n\u001B[1;32m    422\u001B[0m \u001B[43m           \u001B[49m\u001B[38;5;241;43m*\u001B[39;49m\u001B[38;5;241;43m*\u001B[39;49m\u001B[43mkwargs\u001B[49m\u001B[43m)\u001B[49m\u001B[38;5;241m.\u001B[39mstdout\n",
+      "File \u001B[0;32m~/miniconda3/envs/YamagotiProjects/lib/python3.10/subprocess.py:505\u001B[0m, in \u001B[0;36mrun\u001B[0;34m(input, capture_output, timeout, check, *popenargs, **kwargs)\u001B[0m\n\u001B[1;32m    503\u001B[0m \u001B[38;5;28;01mwith\u001B[39;00m Popen(\u001B[38;5;241m*\u001B[39mpopenargs, \u001B[38;5;241m*\u001B[39m\u001B[38;5;241m*\u001B[39mkwargs) \u001B[38;5;28;01mas\u001B[39;00m process:\n\u001B[1;32m    504\u001B[0m     \u001B[38;5;28;01mtry\u001B[39;00m:\n\u001B[0;32m--> 505\u001B[0m         stdout, stderr \u001B[38;5;241m=\u001B[39m \u001B[43mprocess\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mcommunicate\u001B[49m\u001B[43m(\u001B[49m\u001B[38;5;28;43minput\u001B[39;49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mtimeout\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[43mtimeout\u001B[49m\u001B[43m)\u001B[49m\n\u001B[1;32m    506\u001B[0m     \u001B[38;5;28;01mexcept\u001B[39;00m TimeoutExpired \u001B[38;5;28;01mas\u001B[39;00m exc:\n\u001B[1;32m    507\u001B[0m         process\u001B[38;5;241m.\u001B[39mkill()\n",
+      "File \u001B[0;32m~/miniconda3/envs/YamagotiProjects/lib/python3.10/subprocess.py:1141\u001B[0m, in \u001B[0;36mPopen.communicate\u001B[0;34m(self, input, timeout)\u001B[0m\n\u001B[1;32m   1139\u001B[0m     \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39m_stdin_write(\u001B[38;5;28minput\u001B[39m)\n\u001B[1;32m   1140\u001B[0m \u001B[38;5;28;01melif\u001B[39;00m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mstdout:\n\u001B[0;32m-> 1141\u001B[0m     stdout \u001B[38;5;241m=\u001B[39m \u001B[38;5;28;43mself\u001B[39;49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mstdout\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mread\u001B[49m\u001B[43m(\u001B[49m\u001B[43m)\u001B[49m\n\u001B[1;32m   1142\u001B[0m     \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mstdout\u001B[38;5;241m.\u001B[39mclose()\n\u001B[1;32m   1143\u001B[0m \u001B[38;5;28;01melif\u001B[39;00m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mstderr:\n",
+      "\u001B[0;31mKeyboardInterrupt\u001B[0m: "
+     ]
+    }
+   ],
+   "execution_count": 64
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "",
+   "id": "e492b80b54454b70"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "",
+   "id": "c3d612f3e6dcb2d"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "",
+   "id": "619540b3fa532573"
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-10-16T14:22:44.292513Z",
+     "end_time": "2025-10-17T07:24:58.063314Z",
      "start_time": "2025-10-13T04:09:04.625104Z"
     }
    },
@@ -1360,7 +1584,7 @@
     "from datetime import datetime, timedelta, timezone\n",
     "\n",
     "JST = timezone(timedelta(hours=9))\n",
-    "start = datetime(2025, 10, 1, 10, 30, 0, tzinfo=JST)\n",
+    "start = datetime(2025, 9, 1, 10, 30, 0, tzinfo=JST)\n",
     "end   = datetime(2025,10,2, 20, 0, 0, tzinfo=JST)\n",
     "\n",
     "minutes = int((end - start).total_seconds() // 60)  # 59040\n",
