--- a/自动化脚本.ipynb
+++ b/自动化脚本.ipynb
@@ -1358,8 +1358,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-10-22T08:18:19.445336Z",
-     "start_time": "2025-10-22T08:18:19.426563Z"
+     "end_time": "2025-10-23T01:03:13.004267Z",
+     "start_time": "2025-10-23T01:03:12.993926Z"
     }
    },
    "cell_type": "code",
@@ -1367,8 +1367,8 @@
     "from datetime import datetime, timedelta, timezone\n",
     "\n",
     "JST = timezone(timedelta(hours=9))\n",
-    "start = datetime(2025,10,13, 15, 30, 0, tzinfo=JST)\n",
-    "end   = datetime(2025,10,22, 11, 30, 0, tzinfo=JST)\n",
+    "start = datetime(2025,10,19, 13, 30, 0, tzinfo=JST)\n",
+    "end   = datetime(2025,10,23, 11, 30, 0, tzinfo=JST)\n",
     "\n",
     "minutes = int((end - start).total_seconds() // 60)  # 59040\n",
     "timestamps = [(start + timedelta(minutes=i)).isoformat(timespec=\"seconds\")\n",
@@ -1381,29 +1381,27 @@
     {
      "data": {
       "text/plain": [
-       "(12720,\n",
-       " ['2025-10-13T15:30:00+09:00',\n",
-       "  '2025-10-13T15:31:00+09:00',\n",
-       "  '2025-10-13T15:32:00+09:00'],\n",
-       " ['2025-10-22T11:27:00+09:00',\n",
-       "  '2025-10-22T11:28:00+09:00',\n",
-       "  '2025-10-22T11:29:00+09:00'])"
+       "(5640,\n",
+       " ['2025-10-19T13:30:00+09:00',\n",
+       "  '2025-10-19T13:31:00+09:00',\n",
+       "  '2025-10-19T13:32:00+09:00'],\n",
+       " ['2025-10-23T11:27:00+09:00',\n",
+       "  '2025-10-23T11:28:00+09:00',\n",
+       "  '2025-10-23T11:29:00+09:00'])"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 19
+   "execution_count": 23
   },
   {
    "metadata": {
-    "jupyter": {
-     "is_executing": true
-    },
     "ExecuteTime": {
-     "start_time": "2025-10-22T08:18:20.724338Z"
+     "end_time": "2025-10-23T03:04:12.593645Z",
+     "start_time": "2025-10-23T03:04:08.423402Z"
     }
    },
    "cell_type": "code",
@@ -1428,34 +1426,21 @@
    "id": "5a913a2327bf4883",
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1/12720] 2025-10-13T15:30:00+09:00\n",
-      "{\"task_id\":\"fc20e4722df240b6b4bccd5dfd2d7563\",\"job_id\":\"fc20e4722df240b6b4bccd5dfd2d7563\"}\n",
-      "\n",
-      "[2/12720] 2025-10-13T15:31:00+09:00\n",
-      "{\"task_id\":\"589a7630a6164eda84dcd7631d78435d\",\"job_id\":\"589a7630a6164eda84dcd7631d78435d\"}\n",
-      "\n",
-      "[3/12720] 2025-10-13T15:32:00+09:00\n",
-      "{\"task_id\":\"462c9f378b344964ac58cda57e55b225\",\"job_id\":\"462c9f378b344964ac58cda57e55b225\"}\n",
-      "\n",
-      "[4/12720] 2025-10-13T15:33:00+09:00\n",
-      "{\"task_id\":\"32031cfacaff4bd6a0cafb5830d74904\",\"job_id\":\"32031cfacaff4bd6a0cafb5830d74904\"}\n",
-      "\n",
-      "[5/12720] 2025-10-13T15:34:00+09:00\n",
-      "{\"task_id\":\"7d9f9ff670a34b83b191288e653160c7\",\"job_id\":\"7d9f9ff670a34b83b191288e653160c7\"}\n",
-      "\n",
-      "[6/12720] 2025-10-13T15:35:00+09:00\n",
-      "{\"task_id\":\"92780a1c247743fd8a0a4e3f3b106bfb\",\"job_id\":\"92780a1c247743fd8a0a4e3f3b106bfb\"}\n",
-      "\n",
-      "[7/12720] 2025-10-13T15:36:00+09:00\n",
-      "{\"task_id\":\"c5ba79263d2843828ad0cc17fd64dbc2\",\"job_id\":\"c5ba79263d2843828ad0cc17fd64dbc2\"}\n",
-      "\n"
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mKeyboardInterrupt\u001B[0m                         Traceback (most recent call last)",
+      "Cell \u001B[0;32mIn[25], line 7\u001B[0m\n\u001B[1;32m      5\u001B[0m \u001B[38;5;28;01mfor\u001B[39;00m i, ts \u001B[38;5;129;01min\u001B[39;00m \u001B[38;5;28menumerate\u001B[39m(timestamps, \u001B[38;5;241m1\u001B[39m):\n\u001B[1;32m      6\u001B[0m     payload \u001B[38;5;241m=\u001B[39m json\u001B[38;5;241m.\u001B[39mdumps({\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mtimestamp_iso\u001B[39m\u001B[38;5;124m\"\u001B[39m: ts})\n\u001B[0;32m----> 7\u001B[0m     out \u001B[38;5;241m=\u001B[39m \u001B[43msubprocess\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mcheck_output\u001B[49m\u001B[43m(\u001B[49m\n\u001B[1;32m      8\u001B[0m \u001B[43m        \u001B[49m\u001B[43m[\u001B[49m\u001B[38;5;124;43m\"\u001B[39;49m\u001B[38;5;124;43mcurl\u001B[39;49m\u001B[38;5;124;43m\"\u001B[39;49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[38;5;124;43m\"\u001B[39;49m\u001B[38;5;124;43m-sS\u001B[39;49m\u001B[38;5;124;43m\"\u001B[39;49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[38;5;124;43m\"\u001B[39;49m\u001B[38;5;124;43m-X\u001B[39;49m\u001B[38;5;124;43m\"\u001B[39;49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[38;5;124;43m\"\u001B[39;49m\u001B[38;5;124;43mPOST\u001B[39;49m\u001B[38;5;124;43m\"\u001B[39;49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43murl\u001B[49m\u001B[43m,\u001B[49m\n\u001B[1;32m      9\u001B[0m \u001B[43m         \u001B[49m\u001B[38;5;124;43m\"\u001B[39;49m\u001B[38;5;124;43m-H\u001B[39;49m\u001B[38;5;124;43m\"\u001B[39;49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[38;5;124;43m\"\u001B[39;49m\u001B[38;5;124;43mContent-Type: application/json\u001B[39;49m\u001B[38;5;124;43m\"\u001B[39;49m\u001B[43m,\u001B[49m\n\u001B[1;32m     10\u001B[0m \u001B[43m         \u001B[49m\u001B[38;5;124;43m\"\u001B[39;49m\u001B[38;5;124;43m-d\u001B[39;49m\u001B[38;5;124;43m\"\u001B[39;49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mpayload\u001B[49m\u001B[43m]\u001B[49m\u001B[43m,\u001B[49m\n\u001B[1;32m     11\u001B[0m \u001B[43m        \u001B[49m\u001B[43mstderr\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[43msubprocess\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mSTDOUT\u001B[49m\n\u001B[1;32m     12\u001B[0m \u001B[43m    \u001B[49m\u001B[43m)\u001B[49m\u001B[38;5;241m.\u001B[39mdecode(\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mutf-8\u001B[39m\u001B[38;5;124m\"\u001B[39m, \u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mreplace\u001B[39m\u001B[38;5;124m\"\u001B[39m)\n\u001B[1;32m     13\u001B[0m     \u001B[38;5;28mprint\u001B[39m(\u001B[38;5;124mf\u001B[39m\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124m[\u001B[39m\u001B[38;5;132;01m{\u001B[39;00mi\u001B[38;5;132;01m}\u001B[39;00m\u001B[38;5;124m/\u001B[39m\u001B[38;5;132;01m{\u001B[39;00m\u001B[38;5;28mlen\u001B[39m(timestamps)\u001B[38;5;132;01m}\u001B[39;00m\u001B[38;5;124m] \u001B[39m\u001B[38;5;132;01m{\u001B[39;00mts\u001B[38;5;132;01m}\u001B[39;00m\u001B[38;5;130;01m\\n\u001B[39;00m\u001B[38;5;132;01m{\u001B[39;00mout\u001B[38;5;132;01m}\u001B[39;00m\u001B[38;5;130;01m\\n\u001B[39;00m\u001B[38;5;124m\"\u001B[39m)\n\u001B[1;32m     14\u001B[0m     \u001B[38;5;28;01mif\u001B[39;00m i\u001B[38;5;241m%\u001B[39m\u001B[38;5;241m100\u001B[39m \u001B[38;5;241m==\u001B[39m \u001B[38;5;241m0\u001B[39m:\n",
+      "File \u001B[0;32m~/miniconda3/envs/YamagotiProjects/lib/python3.10/subprocess.py:421\u001B[0m, in \u001B[0;36mcheck_output\u001B[0;34m(timeout, *popenargs, **kwargs)\u001B[0m\n\u001B[1;32m    418\u001B[0m         empty \u001B[38;5;241m=\u001B[39m \u001B[38;5;124mb\u001B[39m\u001B[38;5;124m'\u001B[39m\u001B[38;5;124m'\u001B[39m\n\u001B[1;32m    419\u001B[0m     kwargs[\u001B[38;5;124m'\u001B[39m\u001B[38;5;124minput\u001B[39m\u001B[38;5;124m'\u001B[39m] \u001B[38;5;241m=\u001B[39m empty\n\u001B[0;32m--> 421\u001B[0m \u001B[38;5;28;01mreturn\u001B[39;00m \u001B[43mrun\u001B[49m\u001B[43m(\u001B[49m\u001B[38;5;241;43m*\u001B[39;49m\u001B[43mpopenargs\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mstdout\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[43mPIPE\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mtimeout\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[43mtimeout\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mcheck\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[38;5;28;43;01mTrue\u001B[39;49;00m\u001B[43m,\u001B[49m\n\u001B[1;32m    422\u001B[0m \u001B[43m           \u001B[49m\u001B[38;5;241;43m*\u001B[39;49m\u001B[38;5;241;43m*\u001B[39;49m\u001B[43mkwargs\u001B[49m\u001B[43m)\u001B[49m\u001B[38;5;241m.\u001B[39mstdout\n",
+      "File \u001B[0;32m~/miniconda3/envs/YamagotiProjects/lib/python3.10/subprocess.py:505\u001B[0m, in \u001B[0;36mrun\u001B[0;34m(input, capture_output, timeout, check, *popenargs, **kwargs)\u001B[0m\n\u001B[1;32m    503\u001B[0m \u001B[38;5;28;01mwith\u001B[39;00m Popen(\u001B[38;5;241m*\u001B[39mpopenargs, \u001B[38;5;241m*\u001B[39m\u001B[38;5;241m*\u001B[39mkwargs) \u001B[38;5;28;01mas\u001B[39;00m process:\n\u001B[1;32m    504\u001B[0m     \u001B[38;5;28;01mtry\u001B[39;00m:\n\u001B[0;32m--> 505\u001B[0m         stdout, stderr \u001B[38;5;241m=\u001B[39m \u001B[43mprocess\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mcommunicate\u001B[49m\u001B[43m(\u001B[49m\u001B[38;5;28;43minput\u001B[39;49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mtimeout\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[43mtimeout\u001B[49m\u001B[43m)\u001B[49m\n\u001B[1;32m    506\u001B[0m     \u001B[38;5;28;01mexcept\u001B[39;00m TimeoutExpired \u001B[38;5;28;01mas\u001B[39;00m exc:\n\u001B[1;32m    507\u001B[0m         process\u001B[38;5;241m.\u001B[39mkill()\n",
+      "File \u001B[0;32m~/miniconda3/envs/YamagotiProjects/lib/python3.10/subprocess.py:1141\u001B[0m, in \u001B[0;36mPopen.communicate\u001B[0;34m(self, input, timeout)\u001B[0m\n\u001B[1;32m   1139\u001B[0m     \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39m_stdin_write(\u001B[38;5;28minput\u001B[39m)\n\u001B[1;32m   1140\u001B[0m \u001B[38;5;28;01melif\u001B[39;00m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mstdout:\n\u001B[0;32m-> 1141\u001B[0m     stdout \u001B[38;5;241m=\u001B[39m \u001B[38;5;28;43mself\u001B[39;49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mstdout\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mread\u001B[49m\u001B[43m(\u001B[49m\u001B[43m)\u001B[49m\n\u001B[1;32m   1142\u001B[0m     \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mstdout\u001B[38;5;241m.\u001B[39mclose()\n\u001B[1;32m   1143\u001B[0m \u001B[38;5;28;01melif\u001B[39;00m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mstderr:\n",
+      "\u001B[0;31mKeyboardInterrupt\u001B[0m: "
      ]
     }
    ],
-   "execution_count": null
+   "execution_count": 25
   },
   {
    "metadata": {},
